--- a/src/app/addbook/addbook.component.html
+++ b/src/app/addbook/addbook.component.html
@@ -1,1 +1,27 @@
-<p>addbook works!</p>
+<div class="main">
+  <app-header></app-header>
+  <section class="signup">
+    <div class="container">
+      <div class="signup-content">
+        <div class="signup-form">
+          <h2 class="form-title">Add Book</h2>
+          <div class="register-form" id="register-form">
+            <div class="form-group">
+              <input type="number" [(ngModel)]="book.id" id="id" placeholder="ID"/>
+            </div>
+            <div class="form-group">
+              <input type="text" [(ngModel)]="book.name" id="login" placeholder="Name"/>
+            </div>
+            <div class="form-group">
+              <input type="text" [(ngModel)]="book.authorName" id="pass" placeholder="Author Name"/>
+            </div>
+            <button class="form-submit" type="button" id="signup" (click)="addBook()">
+              Add Book
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+</div>
