--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,2 +1,28 @@
-<p>Search works!</p>
-<button (click)="navigate()"> Button</button>
+<app-header></app-header>
+<section class="signup">
+  <div class="container">
+    <div class="signup-content">
+      <div class="signup-form">
+        <div class="form-group" style="display: flex; justify-content: space-around">
+          <input style="width: 50%" type="text" [(ngModel)]="searchToken" id="login" placeholder="Search Token"/>
+          <button style="width: 25%" class="form-submit" type="button" id="signup" (click)="search()">
+            Search
+          </button>
+        </div>
+        <table>
+          <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Author Name</th>
+          </tr>
+          <tr *ngFor="let book of books">
+            <td>{{book.id}}</td>
+            <td>{{book.name}}</td>
+            <td>{{book.authorName}}</td>
+          </tr>
+        </table>
+
+      </div>
+    </div>
+  </div>
+</section>
